StateMachine support now conditions